--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.8
+  firebase_storage: ^11.6.9
+  email_otp: ^2.1.2
+  cloud_firestore: ^4.15.8
+  image_picker: ^1.0.7
+  uuid: ^4.3.3
+  image_network: ^2.5.6
   flutter_svg: ^2.0.10+1
 
 dev_dependencies:
