--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_network: ^2.5.6
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
+  password_strength_checker: ^1.2.3
 
 dev_dependencies:
   flutter_test:
