--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   intl: ^0.19.0
   password_strength_checker: ^1.2.3
+  draggable_scrollbar: ^0.1.0
 
 dev_dependencies:
   flutter_test:
