--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   intl: ^0.19.0
   password_strength_checker: ^1.2.3
   draggable_scrollbar: ^0.1.0
+  just_audio: ^0.9.37
 
 dev_dependencies:
   flutter_test:
