--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   password_strength_checker: ^1.2.3
   draggable_scrollbar: ^0.1.0
   just_audio: ^0.9.37
+  video_player: ^2.8.6
 
 dev_dependencies:
   flutter_test:
