--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   # flutter_youtube_view: ^2.0.4
   youtube_player_iframe: ^5.1.2
   google_fonts: ^6.2.1
+  file_picker: ^8.0.6
 
 
 dev_dependencies:
