--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   youtube_player_iframe: ^5.1.2
   google_fonts: ^6.2.1
   file_picker: ^8.0.6
+  excel: ^4.0.3
 
 
 dev_dependencies:
