--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   excel: ^4.0.3
   flutter_quill: ^10.0.1
   url_launcher: ^6.3.0
+  font_awesome_flutter: ^10.7.0
 
 
 dev_dependencies:
