--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   youtube_player_iframe: ^5.1.2
   google_fonts: ^6.2.1
   file_picker: ^8.0.6
-  excel: ^4.0.3
+  #excel: ^4.0.3
   flutter_quill: ^10.0.1
   url_launcher: ^6.3.0
   font_awesome_flutter: ^10.7.0
