--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   collection: ^1.18.0
   zxcvbn: ^1.0.0
+  flutter_secure_storage: ^9.2.2
 
 
 dev_dependencies:
