update member process and login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   zxcvbn: ^1.0.0
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
+  dart_jsonwebtoken: ^2.14.0
 
 
 dev_dependencies:
