--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   shared_preferences: ^2.3.2
   dart_jsonwebtoken: ^2.14.0
+  pdf: ^3.11.1
 
 
 dev_dependencies:
