--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   shared_preferences: ^2.3.2
   dart_jsonwebtoken: ^2.14.0
   pdf: ^3.11.1
+  printing: ^5.13.1
 
 
 dev_dependencies:
